docs: add swagger annotation to TrueFalseText resources ss-026
